syntax = "proto3";

package user;

option go_package = "kubedeploy-eks/api/proto/user";

service UserService {
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  rpc GetUserByEmail(GetUserByEmailRequest) returns (GetUserResponse);
}

message GetUserRequest {
  uint32 id = 1;
}

message GetUserByEmailRequest {
  string email = 1;
}

message GetUserResponse {
  uint32 id = 1;
  string username = 2;
  string email = 3;
  string created_at = 4;
  string updated_at = 5;
}

message ErrorResponse {
  string message = 1;
}
